<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ng_trajectory_ros</name>
  <version>0.2.0</version>
  <description>
    ROS wrapper for ng_trajectory.
  </description>

  <maintainer email="klapajar@fel.cvut.cz">Jaroslav Klapálek</maintainer>

  <license>GPLv3</license>

  <author email="klapajar@fel.cvut.cz">Jaroslav Klapálek</author>

  <url type="repository">https://github.com/jara001/ng_trajectory_ros</url>

  <!-- Build tool. For ROS1 leave this here. -->
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>

  <!-- Packages dependencies. -->
  <exec_depend condition="$ROS_VERSION == 1">rospy</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">rclpy</exec_depend>

  <exec_depend condition="$ROS_VERSION == 1" version_gte="0.4.0">autopsy</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2" version_gte="0.7.0">autopsy</exec_depend>
  <exec_depend>ng_trajectory</exec_depend>
  <exec_depend>python-numpy</exec_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>plan_msgs</exec_depend>
  <exec_depend>autoware_auto_msgs</exec_depend>

  <!-- Any other parameters can be stored here. -->
  <export>
    <index url="git@github.com:jara001/ng_trajectory_ros.git" />

    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_python</build_type>
  </export>

</package>
